--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <head>
         <title>Jose's Stuff</title>
     </head>
-    <body>
-        <p>Todo: Start migrating my test projects here</p>
+    <body style="font-family:courier; color:white; background-color: black">
+        <h1>a place for stufff</h1>
+        <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
+        <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
+
         <section id="main"></section>
         <script src="main.js"></script>
     </body>
