--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         <a-scene>
 
-            <a-box position="-1 0.5 -11" rotation="0 45 0" color="blue" opacity="0.2"></a-box>
-            <a-sphere position="0 1.25 -13" radius="1.25" color="red" opacity="0.2"></a-sphere>
-            <a-cylinder position="1 0.75 -11" radius="0.5" height="1.5" color="green" opacity="0.2"></a-cylinder>
-            <a-plane position="0 0 -12" rotation="-90 0 0" width="4" height="4" color="green" opacity="0.2"></a-plane>
+            <a-box position="-3 0.5 -11" rotation="0 45 0" color="blue" opacity="0.2"></a-box>
+            <a-sphere position="0 0.5 -11" radius="0.5" color="red" opacity="0.2"></a-sphere>
+            <a-cylinder position="3 0.75 -11" radius="0.5" height="1.5" color="green" opacity="0.2"></a-cylinder>
+            <!-- <a-plane position="0 0 -12" rotation="-90 0 0" width="4" height="4" color="green" opacity="0.2"></a-plane> -->
             <!-- <a-sky color="#ECECEC"></a-sky> -->
 
             <!-- <a-video src="delet.gif" position="0 1 -5"></a-video> -->
@@ -26,8 +26,20 @@
 
             <!-- <a-link href="https://www.google.com" position="-1 1 -5" title="My Homepage"></a-link> -->
 
-        </a-scene>
 
+           <!-- <a-entity>
+                <a-entity position="5 0 0"></a-entity>
+                    <a-box position="-3 0.5 -11" rotation="0 45 0" color="blue" opacity="0.2"></a-box>
+                <a-animation attribute="rotation"
+                           dur="10000"
+                           fill="forwards"
+                           easing="linear"
+                           to="0 360 0"
+                           repeat="indefinite"></a-animation>
+            </a-entity> -->
+
+
+        </a-scene>
         <script src="main.js"></script>
     </body>
 </html>
