--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
             </a-entity>
 
+            <!-- transparency fix, ensure the stranslucent floor tiles and stuff -->
+            <!-- are higher up in the html, for transparency reasons -->
+            <a-entity id="blob"></a-entity>
+
             <a-assets>
                 <video id="video-asset" src="vid.mp4"></video>
             </a-assets>
@@ -37,12 +41,26 @@
             <a-sphere id="red-sphere" position="0 0.5 -11" radius="0.5" color="red" opacity="0.2"></a-sphere>
             <a-cylinder id='green-cyl' position="3 0.75 -11" radius="0.5" height="1.5" color="green" opacity="0.2"></a-cylinder>
 
+            <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
+
+            <a-entity id='20181201-dream' position='-4 0.01 -9'>
+                <a-entity class='grid-fitter' position='0.5 0 0.5'>
+
+                    <a-circle radius='0.25' position='0 0 1' rotation='-90 0 0' opacity='0.2'></a-circle>
+                    <a-circle radius='0.25' position='1 0 0' rotation='-90 0 0' opacity='0.2'></a-circle>
+                    <a-circle radius='0.25' position='2 0 0' rotation='-90 0 0' opacity='0.2'></a-circle>
+                    <a-circle radius='0.25' position='2 0 1' rotation='-90 0 0' opacity='0.2'></a-circle>
+                    <a-circle radius='0.25' position='2 0 2' rotation='-90 0 0' opacity='0.2'></a-circle>
+
+                    <a-circle radius='1.5' position='3 0 6' rotation='-90 0 0' color='green'></a-circle>
+                    <a-image src='lamb.png'  alphaTest='0.1' position='3 0.5 6'></a-image>
+                </a-entity>
+            </a-entity>
+
+            <!-- place these things last in HTML, for render order reasons -->
             <a-image src="turtles-in-sink.jpg" position="0 -15 0" rotation="90 0 0" width="20.48" height="15.36"></a-image>
             <a-image src="beach-on-cup.jpg" position="-10 2.15 0" rotation="0 90 0" width="5.76" height="10.24"></a-image>
             <a-image src="abstract.png" position="10 2 0" rotation="0 -90 0" width="6" height="6"></a-image>
-
-
-            <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
 
         </a-scene>
         <script src="main.js"></script>
