--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
             </a-entity>
 
+            <!-- place these things first in HTML, for render order reasons -->
+            <a-image src="turtles-in-sink.jpg" position="0 -15 0" rotation="90 0 0" width="20.48" height="15.36"></a-image>
+            <a-image src="beach-on-cup.jpg" position="-10 2.15 0" rotation="0 90 0" width="5.76" height="10.24"></a-image>
+            <a-image src="mella.png" position="-10.01 -0.09 0" rotation="0 90 0" width="5.76" height="5.76"></a-image>
+
             <!-- transparency fix, ensure the stranslucent floor tiles and stuff -->
             <!-- are higher up in the html, for transparency reasons -->
             <a-entity id="blob"></a-entity>
@@ -43,6 +48,17 @@
 
             <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
 
+            <a-entity class='christmas-stuff' position='-4 0.01 -9'>
+                <a-entity class='grid-fitter' position='0.5 0 0.5'>
+                    <a-entity id='christmas-tree' position='5 0 3'>
+                        <a-entity position='0 0.7 0'>
+                            <a-cone color='green' radius-bottom='1' height='2.05' position='0 1.025 0'></a-cone>
+                        </a-entity>
+                        <a-cylinder color='saddlebrown' radius='0.25' height='0.7' position='0 0.35 0'></a-cylinder>
+                    </a-entity>
+                </a-entity>
+            </a-entity>
+
             <a-entity id='20181201-dream' position='-4 0.01 -9'>
                 <a-entity class='grid-fitter' position='0.5 0 0.5'>
 
@@ -52,14 +68,12 @@
                     <a-circle radius='0.25' position='2 0 1' rotation='-90 0 0' opacity='0.2'></a-circle>
                     <a-circle radius='0.25' position='2 0 2' rotation='-90 0 0' opacity='0.2'></a-circle>
 
-                    <a-circle radius='1.5' position='3 0 6' rotation='-90 0 0' color='green'></a-circle>
-                    <a-image src='lamb.png'  alphaTest='0.1' position='3 0.5 6'></a-image>
+                    <a-circle radius='1.5' position='3 0 6' rotation='-90 0 0' color='green' opacity='0.5'></a-circle>
+                    <a-image src='lamb.png' position='3 0.5 6'></a-image>
                 </a-entity>
             </a-entity>
 
             <!-- place these things last in HTML, for render order reasons -->
-            <a-image src="turtles-in-sink.jpg" position="0 -15 0" rotation="90 0 0" width="20.48" height="15.36"></a-image>
-            <a-image src="beach-on-cup.jpg" position="-10 2.15 0" rotation="0 90 0" width="5.76" height="10.24"></a-image>
             <a-image src="abstract.png" position="10 2 0" rotation="0 -90 0" width="6" height="6"></a-image>
 
         </a-scene>
