--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <footer>
                 <br>
-                <p style="text-align: right; padding-right: 8px">~ Merry Schrismas, Jose.</p>
+                <p style="text-align: right; padding-right: 8px">~ Merry Christmas, Jose.</p>
             </footer>
         </div>
 
