--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Jose's Stuff</title>
         <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     </head>
     <body style="font-family:courier; color:white; background-color: black">
 
@@ -72,20 +73,28 @@
         </a-scene>
         <div id="0Panel">
             <h1>a place for stuff</h1>
+            <br>
             <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
             <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
             <p>=====</p>
             <p>Oh, hi there! For now please enjoy this simple scene.</p>
+            <p>Only WASD movement for now
             <p>Click the green cylinder to play audio</p>
             <p>Click the blue cube to play video</p>
             <p>Click the red sphere to generate a tone</p>
+            <p>Click/Touch-drag to rotate view</p>  
             <p>=====</p>
             <p>This app is meant to be opened in FullScreen mode on desktop</p>
             <p>On Cell phones, this side panel should go on the bottom, and include an analog button</p>
-
+            <p>=====</p>
+            <p>You start out in a <span class="red">MYSTERIOUS VOID</span>.<p>
+            <p>Holding nothing but a stick, in midst of a crude geometric landscape.</p>
+            <p>Mouse and Keyboard only for now. <span class="blu">#SorryNotSorry</span></p>
             <footer>
                 <br>
-                <p style="text-align: right; padding-right: 8px">~ Merry Christmas, Jose.</p>
+                <p>123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+                <br>
+                <p style="text-align: right; padding-right: 8px">~ <span class="gre">Merry Christmas</span>, Jose.</p>
             </footer>
         </div>
 
