--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
 
             <a-video id="video-clip" src="#video-asset" position="-3 2 -11" width="2.56" height="1.44" position="0 2 -5"></a-video>
 
-            <a-entity class='christmas-stuff' position='-4 0.01 -9'>
+            <a-entity class='table' position='-4 0.01 -9'>
                 <a-entity class='grid-fitter' position='0.5 0 0.5'>
-                    <a-entity id='christmas-tree' position='5 0 3'>
+                    <a-entity id='table-surface' position='5 0 3'>
                         <a-entity position='0 0.7 0'>
-                            <a-cone color='green' radius-bottom='1' height='2.05' position='0 1.025 0'></a-cone>
+                            <a-cylinder color='saddlebrown' radius='1' height='0.05' position='0 0.025 0'></a-cylinder>
+                            <a-entity position='0 0.05 0'>
+                                <a-box id="clicker-button"  depth= '0.52' width="0.52" height="0.32" position="0 0.05 0" color="yellow"></a-box>
+                                <a-text value="<- click" position="0.26 0 0" rotation="-90 0 0"></a-text>
+                                <a-text value="Score:" align="center" position="0 0 0.45" rotation="-90 0 0"></a-text>
+                                <a-text id="clicker-score" value="0" align="center" position="0 0 0.70" rotation="-90 0 0"></a-text>
+                            </a-entity>
                         </a-entity>
                         <a-cylinder color='saddlebrown' radius='0.25' height='0.7' position='0 0.35 0'></a-cylinder>
                     </a-entity>
@@ -72,24 +78,46 @@
 
         </a-scene>
         <div id="0Panel">
-            <h1>a place for stuff</h1>
+            <p>20181228</p>
+            <p>THIS IS NOW A BLOG</p>
+            <p>I will comment on the creation of this project, and also random subjects.</p>
+            <p>This project is my attempt to staple together a bunch of buzzwords</p>
+            <br>
+            <p>20190105</p>
+            <p>Making a Clicker game. For now it's a button that increases your score. (bug: randomly doesn't work, probably a mouse click raycaster issue)</p>
+            <!--123456789 123456789 1234567894444444444 123456789 123456789 1234567898888888888 123456789 123456789 123456789 123456789 123456789 123456789 -->
+            <br>
+            <h1>A place for stuff</h1>
             <br>
             <p>I don't want to keep creating new repos for new stuff. I'll put stuff here instead.</p>
             <p>"Remember kids, the only difference between screwing around and science is writing it down" - Alex Jason (balistics expert)</p>
             <p>=====</p>
             <p>Oh, hi there! For now please enjoy this simple scene.</p>
-            <p>Only WASD movement for now
+            <p>=====</p>
+            <p>This app is meant to be opened in FullScreen mode on desktop</p>
+            <p>Cell phone controls TBD.</p>
+            <p>=====</p>
+            <p>You start out in a <span class="red">MYSTERIOUS VOID</span>.</p>
+            <p>Your eyes grate on the GREAT WALL OF TEXT.</p>
+            <p>You hold a stick, and stand in midst of a crude geometric landscape.</p>
+            <br>
+            <p>Use your W/A/S/D keys to move around</p>
             <p>Click the green cylinder to play audio</p>
             <p>Click the blue cube to play video</p>
             <p>Click the red sphere to generate a tone</p>
-            <p>Click/Touch-drag to rotate view</p>  
-            <p>=====</p>
-            <p>This app is meant to be opened in FullScreen mode on desktop</p>
-            <p>On Cell phones, this side panel should go on the bottom, and include an analog button</p>
-            <p>=====</p>
-            <p>You start out in a <span class="red">MYSTERIOUS VOID</span>.<p>
-            <p>Holding nothing but a stick, in midst of a crude geometric landscape.</p>
-            <p>Mouse and Keyboard only for now. <span class="blu">#SorryNotSorry</span></p>
+            <p>Click/Touch-drag screen to rotate view</p>
+            <br>
+            <p>Josh the Goat: "All the cool kids brush their teeth, stop being a loser!"</p>
+            <br>
+            <p>Videogame: "Don't hit Josh"</p>
+            <p>Rules:<br>You loose one point each time you hit Josh with the stick<br>Keep track of the score yourself for now<br>I just got a score of -12, try beating it!</p>
+            <br>
+            <p>Homework, make one of these:</p>
+            <p>- An AI than can play Don't hit Josh</p>
+            <p>- An AI that can recognize numbers</p>
+            <br>
+            <p>Press "F", or the "Goggles" icon to go to full-screen mode.</p>
+            <p>For now, mouse and keyboard constrols only. <span class="blu">#SorryNotSorry</span></p>
             <footer>
                 <br>
                 <p>123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
