Add laser pointer
Replaced mouse cursor with in-app hip laser. Mouse movement now rotates camera.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,44 @@
         <!-- <a-scene id="scene" embedded style="height:1000px;width:1000px;"> -->
 
             <!-- qwer  https://glitch.com/edit/#!/a-frame-mouse-click-example?path=index.html:25:6 -->
-            <a-entity id="camera" camera look-controls wasd-controls cursor="rayOrigin: mouse" position="0 1.6 0">
+            <!-- https://aframe.io/docs/0.8.0/components/cursor.html -->
+            <a-entity id="camera" camera look-controls="pointerLockEnabled: true" wasd-controls position="0 1.6 0">
                 <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
+
+                <!-- <a-box  position="0.2 -0.4 -0.9" height="0.2" width="0.2" depth="0.2"></a-box> -->
+
+                <!-- https://stackoverflow.com/questions/50721192/a-frame-raycaster-not-working-need-intersection-point-with-a-sky -->
+                <!-- important!! the aframe wiki could use an example of this -->
+                <!-- https://aframe.io/docs/0.8.0/components/laser-controls.html -->
+                <!-- https://aframe.io/docs/0.8.0/components/raycaster.html -->
+                <!-- qwer this line might need cleaning -->
+                <a-entity position="0.2 -0.4 -1.4" cursor="rayOrigin: entity; showLine: true;" raycaster="showLine: true; far: 16" line="color: white; opacity:0.5"></a-entity>
+
+                <!-- cursor="rayOrigin: entity; showLine: true;" -->
+
+                <!-- pointerLockEnabled  Whether to hide the cursor using the Pointer Lock API.  true -->
+                <!-- ="pointerLockEnabled: true" -->
+
+
+                <!-- <a-entity raycaster showLine position="0.2 -0.4 -0.9"></a-entity> -->
+
+                <!-- <a-entity cursor="fuse: true; fuseTimeout: 500"
+                          position="0 0 -1"
+                          geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+                          material="color: black; shader: flat">
+                </a-entity>
+                <a-entity laser-controls></a-entity>
+                <a-entity laser-controls 
+                          cursor="fuse: true; fuseTimeout: 500"
+                          position="0 0 -1"
+                          geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+                          material="color: black; shader: flat"
+                          raycaster="objects: .links; far: 5;" 
+                          showLine="true;">
+                              
+                </a-entity> -->
+
+                    <!-- <a-entity laser-controls line="color: red; opacity: 0.75" position="0 0 -2"></a-entity> -->
             </a-entity>
 
             <!-- place these things first in HTML, for render order reasons -->
@@ -85,6 +121,12 @@
             <br>
             <p>20190105</p>
             <p>Making a Clicker game. For now it's a button that increases your score. (bug: randomly doesn't work, probably a mouse click raycaster issue)</p>
+            <br>
+            <p>20190107</p>
+            <p>And to our left we have a scene powered by the A-Frame WebVR framework, and coded in HTML/JavaScript.</p>
+            <br>
+            <p>20190110</p>
+            <p>Added laser pointer to stick. Should be possible to add cardboard controls </p>
             <!--123456789 123456789 1234567894444444444 123456789 123456789 1234567898888888888 123456789 123456789 123456789 123456789 123456789 123456789 -->
             <br>
             <h1>A place for stuff</h1>
@@ -94,8 +136,8 @@
             <p>=====</p>
             <p>Oh, hi there! For now please enjoy this simple scene.</p>
             <p>=====</p>
-            <p>This app is meant to be opened in FullScreen mode on desktop</p>
-            <p>Cell phone controls TBD.</p>
+            <p>This app is meant to be opened on a google cardboard capable phone</p>
+            <p>Cell phone controls to be discussed.</p>
             <p>=====</p>
             <p>You start out in a <span class="red">MYSTERIOUS VOID</span>.</p>
             <p>Your eyes grate on the GREAT WALL OF TEXT.</p>
