changed spawn location

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <!-- qwer  https://glitch.com/edit/#!/a-frame-mouse-click-example?path=index.html:25:6 -->
             <!-- https://aframe.io/docs/0.8.0/components/cursor.html -->
-            <a-entity id="camera" camera look-controls="pointerLockEnabled: true" wasd-controls position="0 1.6 0">
+            <!-- <a-entity id="camera" camera look-controls="pointerLockEnabled: true" wasd-controls position="0 1.6 0"> -->
+            <a-entity id="camera" camera look-controls="pointerLockEnabled: true" wasd-controls position="1.5 1.6 -3.5">
                 <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
 
                 <!-- <a-box  position="0.2 -0.4 -0.9" height="0.2" width="0.2" depth="0.2"></a-box> -->
