added cutouts of Shaggy Rogers

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a-entity position='0 0.7 0'>
                             <a-cylinder color='saddlebrown' radius='1' height='0.05' position='0 0.025 0'></a-cylinder>
                             <a-entity position='0 0.05 0'>
-                                <a-box id="clicker-button"  depth= '0.52' width="0.52" height="0.32" position="0 0.05 0" color="yellow"></a-box>
+                                <a-box id="clicker-button" depth= '0.52' width="0.52" height="0.32" position="0 0.05 0" color="yellow"></a-box>
                                 <a-text value="<- click" position="0.26 0 0" rotation="-90 0 0"></a-text>
                                 <a-text value="Score:" align="center" position="0 0 0.45" rotation="-90 0 0"></a-text>
                                 <a-text id="clicker-score" value="0" align="center" position="0 0 0.70" rotation="-90 0 0"></a-text>
@@ -142,12 +142,12 @@
             <p>- An AI that can recognize numbers</p>
             <br>
             <p>Press "F", or the "Goggles" icon to go to full-screen mode.</p>
-            <p>For now, mouse and keyboard constrols only. <span class="blu">#SorryNotSorry</span></p>
+            <p>For now, mouse and keyboard constrols only. <span class="gre">#SorryNotSorry</span></p>
             <footer>
                 <br>
                 <p>123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
                 <br>
-                <p style="text-align: right; padding-right: 8px">~ <span class="gre">Merry Christmas</span>, Jose.</p>
+                <p style="text-align: right; padding-right: 8px">~ <a href="https://github.com/jedpimentel/stuff" class="blu">[Click here to go to repo]</a></p>
             </footer>
         </div>
 
