WebVR Media Player (proof of concept)

--- a/demo/shaggy-rogers/index.html
+++ b/demo/shaggy-rogers/index.html
@@ -10,12 +10,7 @@
         <a-scene ar id="scene">
 
             <a-entity position="0 0 0">
-                <a-camera look-controls="pointerLockEnabled: true" wasd-controls>
-
-<!--                     <a-cylinder id="fing-longer" position="0.2 -0.4 -0.9" radius="0.01" height= "1.0" rotation="90 0 0" color="beige" opacity="1.0"></a-cylinder>
-                    <a-entity position="0.2 -0.4 -1.4" cursor="rayOrigin: entity; showLine: true;" raycaster="showLine: true; far: 16" line="color: white; opacity:0.5"></a-entity>
- -->
-                </a-camera>
+                <a-camera look-controls="pointerLockEnabled: true" wasd-controls></a-camera>
             </a-entity>
 
             <a-image src='shaggy.png' height='10' width='5' position='0 5 -10'></a-image>
