--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 
             <a-entity class='table' position='-4 0.01 -9'>
                 <a-entity class='grid-fitter' position='0.5 0 0.5'>
+
+                    <a-text  position='6 2.2 5' value='scanned\nhandwriting' align='center' src='chalk-effect.png' rotation='0 -90 0'></a-text>
+                    <a-image  position='6 1.5 5' src='chalk-effect.png' rotation='0 -90 0'></a-image>
                     <a-entity position='5 0 3'>
 
                         <!-- table base -->
@@ -94,7 +97,6 @@
                                 <a-text id="clicker-score" value="0" align="center" position="0 0 0.70" rotation="-90 0 0"></a-text>
                             </a-entity>
 
-                            <a-image src='chalk-effect.png' position='-2 0 -2'></a-image>
 
                         </a-entity>
 
@@ -104,6 +106,8 @@
                         <a-text position='7 1 3' value='next' align='center'></a-text> 
                         <a-box src='next.png' position='7 0.7 3' height='0.25' width='0.25' depth='0.25'></a-box>
                     </a-entity>
+
+                    
 
                 </a-entity>
 
@@ -124,14 +128,14 @@
             </a-entity>
 
             <!-- place these things last in HTML, for render order reasons -->
-            <a-image src="abstract.png" position="10 2 0" rotation="0 -90 0" width="6" height="6"></a-image>
+            <!-- <a-image src="abstract.png" position="10 2 0" rotation="0 -90 0" width="6" height="6"></a-image> -->
 
         </a-scene>
         <div id="0Panel">
             <br>
             <p>TODAY'S MENU</p>
             <br>
-            <ul><span class="red">►</span> WebVR Video Player <a href="/demo/player">[open]</a></li></ul>
+            <ul><span class="red">►</span> WebVR Video Player <a href="demo/player">[open]</a></li></ul>
             <br>
             <br>
             <p>20181228</p>
