quick fix to for text blob position
20190105
The text blob on the right would randomly show up under the VR blob,
possible related to how the outermost ertical scvroll bar will take up
more space. Maybe it'd be better to deactivate the scroll bar, or use an
alternative layouting methor.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <meta charset="UTF-8">
     </head>
-    <body style="font-family:courier; color:white; background-color: black">
+    <body style="font-family:courier; color:white; background-color: black; height:100vh; overflow:none">
 
         <!-- REFACTOR: https://aframe.io/docs/0.8.0/components/sound.html -->
         <audio id='audio-clip'>
