please stop breaking

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </audio>
         <section id="main"></section>
 
-        <a-scene id="scene" embedded style="height:1000px;width:1000px;">
+        <a-scene id="scene" embedded style="height:25%;width:25%;">
         <!-- <a-scene id="scene" embedded style="height:1000px;width:1000px;"> -->
 
             <!-- qwer  https://glitch.com/edit/#!/a-frame-mouse-click-example?path=index.html:25:6 -->
